--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
-  max-width: 1280px;
+  min-width: 1024px;
   margin: 0 auto;
-  padding: 2rem;
+  height: 100vh;
   text-align: center;
 }
 
